--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="main-header">
+    <header class="main-header">
         <div class="logo">
             <img src="logo_campus_transparent.PNG.png" alt="" />
         </div>
@@ -21,8 +21,8 @@
             <div class="second-line"></div>
             <div class="third-line"></div>
         </div>
-    </div>
-    <div class="main-menu" id="main-menu">
+    </header>
+    <nav class="main-menu" id="main-menu">
         <ul class="first-menu">
             <li><a href="#">Accueil</a></li>
             <li id="portfolio">
@@ -36,7 +36,7 @@
             </li>
             <li><a href="#">Contact</a></li>
         </ul>
-    </div>
+    </nav>
     <div class="splide">
         <div class="splide__track">
             <ul class="splide__list">
@@ -59,10 +59,7 @@
                 <ul class="splide__list">
                     <li class="splide__slide">
                         <h2>Bienvenue</h2>
-                        <img
-                            src="./assets/img/src/bg-header.jpg"
-                            alt=""
-                        />
+                        <img src="./assets/img/src/bg-header.jpg" alt=""/>
                     </li>
                     <li class="splide__slide">
                         <h2>Bienvenue</h2>
