--- a/project.html
+++ b/project.html
@@ -23,17 +23,17 @@
     </header>
     <nav class="main-menu" id="main-menu">
         <ul class="first-menu">
-            <li><a href="#">Accueil</a></li>
+            <li><a href="index.html">Accueil</a></li>
             <li id="portfolio">
                 <a href="#">Portfolio</a>
                 <ul class="second-menu" id="secondary-menu">
-                    <li><a href="#">Web Devs</a></li>
-                    <li><a href="#">Web Design</a></li>
-                    <li><a href="#">Chef Projet Marketing</a></li>
-                    <li><a href="#">Graphiste</a></li>
+                    <li><a href="portfolio-section-dev.html">Web Devs</a></li>
+                    <li><a href="portfolio-section-design.html">Web Design</a></li>
+                    <li><a href="portfolio-section-cpw.html">Chef Projet Marketing</a></li>
+                    <li><a href="portfolio-section-graph.html">Graphiste</a></li>
                 </ul>
             </li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
     <div class="img-header">
@@ -111,9 +111,9 @@
             <div id="footer-head">
                 <img src="./assets/img/src/logo-white.svg" alt="logo-campus" id="campus-log">
                 <ul id="foot-links">
-                    <li><a href=#>CGU</a></li>
-                    <li><a href=#>Contact</a></li>
-                    <li><a href="#"> Mentions légales </a></li>
+                    <li><a href=cgu.html>CGU</a></li>
+                    <li><a href=contact.html>Contact</a></li>
+                    <li><a href="mention.html"> Mentions légales </a></li>
                 </ul>
                 <ul>
                     <li>Campus Du lac Rive Gauche</li>
