--- a/portfolio-section-dev.html
+++ b/portfolio-section-dev.html
@@ -12,7 +12,7 @@
     <body>
         <header class="main-header">
             <div class="logo">
-                <img src="/assets/img/src/logo_campus_transparent.PNG.png" alt="">
+                <a href="index.html"><img src="/assets/img/src/logo_campus_transparent.PNG.png" alt=""></a>
             </div>
             <div class="burger-bar" id="burger">
                 <div class="first-line"></div>
