--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
         <!-- MENU -->
         <header class="main-header">
             <div class="logo">
-                <img src="/assets/img/src/logo_campus_transparent.PNG.png" alt="">
+                <a href="index.html"><img src="/assets/img/src/logo_campus_transparent.PNG.png" alt=""></a>
             </div>
             <div class="burger-bar" id="burger">
                 <div class="first-line"></div>
