--- a/index-v2.html
+++ b/index-v2.html
@@ -14,7 +14,7 @@
     <body id="new-version-body">
         <header class="main-header">
             <div class="logo">
-                <img src="/assets/img/src/logo_campus_transparent.PNG.png" alt="">
+                <img src="/assets/img/dist/logo_campus_transparent.PNG.png" alt="">
             </div>
             <div class="burger-bar" id="burger">
                 <div class="first-line"></div>
@@ -47,23 +47,23 @@
                 <ul class="splide__list">
                     <li class="splide__slide">
                         <h2>Bienvenue sur notre accueil, d'ici vous pouvez accéder aux portfolios de toutes les sections web du Campus Du Lac.</h2>
-                        <img src="./assets/img/src/bg-header.jpg" alt="" />
+                        <img src="./assets/img/dist/bg-header.jpg" alt="" />
                     </li>
                     <li class="splide__slide">
                         <h2>Web Devs</h2>
-                        <img src="./assets/img/src/dev.jpg" alt="" />
+                        <img src="./assets/img/dist/dev.jpg" alt="" />
                     </li>
                     <li class="splide__slide">
                         <h2>Web Designer</h2>
-                        <img src="./assets/img/src/design.jpg" alt="" />
+                        <img src="./assets/img/dist/design.jpg" alt="" />
                     </li>
                     <li class="splide__slide">
                         <h2>Chef de projet Webmarketing</h2>
-                        <img src="./assets/img/src/cpw.jpg" alt="" />
+                        <img src="./assets/img/dist/cpw.jpg" alt="" />
                     </li>
                     <li class="splide__slide">
                         <h2>Graphistes</h2>
-                        <img src="./assets/img/src/graph.jpg" alt="" />
+                        <img src="./assets/img/dist/graph.jpg" alt="" />
                     </li>
                 </ul>
             </div>
@@ -211,7 +211,7 @@
             <div id="footer">
                 <div id="footer-head">
                     <img
-                        src="./assets/img/src/logo-white.svg"
+                        src="./assets/img/dist/logo-white.svg"
                         alt="logo-campus"
                         id="campus-log"
                     />
