--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
             href="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/css/splide.min.css"
         />
         <link rel="stylesheet" href="assets/css/dist/style.min.css" />
+        <!-- PWA -->
+        <link rel="manifest" href="./manifest.json" />
+        <link rel="apple-touch-icon" href="/assets/icons/icon-96x96.png" />
+        <meta name="apple-mobile-web-app-status-bar" content="white" />
+        <meta name="theme-color" content="#D2F1F2" />
     </head>
     <body>
         <header class="main-header">
             <div class="logo">
-                <img src="/assets/img/src/logo_campus_transparent.PNG.png" alt="">
+                <img src="/assets/img/dist/logo_campus_transparent.PNG.png" alt="">
             </div>
             <div class="burger-bar" id="burger">
                 <div class="first-line"></div>
@@ -43,23 +48,23 @@
                 <ul class="splide__list">
                     <li class="splide__slide">
                         <h2>Bienvenue sur notre accueil, d'ici vous pouvez accéder aux portfolios de toutes les sections web du Campus Du Lac.</h2>
-                        <img src="./assets/img/src/bg-header.jpg" alt="" />
+                        <img src="./assets/img/dist/bg-header.jpg" alt="" />
                     </li>
                     <li class="splide__slide">
                         <h2>Web Devs</h2>
-                        <img src="./assets/img/src/dev.jpg" alt="" />
+                        <img src="./assets/img/dist/dev.jpg" alt="" />
                     </li>
                     <li class="splide__slide">
                         <h2>Web Designer</h2>
-                        <img src="./assets/img/src/design.jpg" alt="" />
+                        <img src="./assets/img/dist/design.jpg" alt="" />
                     </li>
                     <li class="splide__slide">
                         <h2>Chef de projet Webmarketing</h2>
-                        <img src="./assets/img/src/cpw.jpg" alt="" />
+                        <img src="./assets/img/dist/cpw.jpg" alt="" />
                     </li>
                     <li class="splide__slide">
                         <h2>Graphistes</h2>
-                        <img src="./assets/img/src/graph.jpg" alt="" />
+                        <img src="./assets/img/dist/graph.jpg" alt="" />
                     </li>
                 </ul>
             </div>
@@ -207,7 +212,7 @@
             <div id="footer">
                 <div id="footer-head">
                     <img
-                        src="./assets/img/src/logo-white.svg"
+                        src="./assets/img/dist/logo-white.svg"
                         alt="logo-campus"
                         id="campus-log"
                     />
@@ -234,6 +239,7 @@
             </div>
             <p id="copyright">Copyright © All rights reserved 2021 Team 4</p>
         </footer>
+        <script src="./assets/js/app.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script src="./assets/js/dist/scripts.min.js"></script>
