--- a/project.html
+++ b/project.html
@@ -13,7 +13,7 @@
 <body>
     <header class="main-header">
         <div class="logo">
-            <img src="/assets/img/src/logo_campus_transparent.PNG.png" alt="">
+            <img src="/assets/img/dist/logo_campus_transparent.PNG.png" alt="">
         </div>
         <div class="burger-bar" id="burger">
             <div class="first-line"></div>
@@ -41,7 +41,7 @@
     </div>
     <section id="project-section">
         <div class="project-container">
-            <img src="./assets/img/src/card1.jpg" alt="">
+            <img src="./assets/img/dist/card1.jpg" alt="">
             <h2>Project 1</h2>
             <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
                 labore et dolore magna aliquyam erat, sed diam voluptua. <br>At vero eos et accusam et justo duo
@@ -49,7 +49,7 @@
         </div>
         </div>
         <a href="userport.html">
-            <img src="./assets/img/src/author.jpg" alt="" class="author-photo">
+            <img src="./assets/img/dist/author.jpg" alt="" class="author-photo">
         </a>
         <div class="author-description">
             <h2>Sam Oustache</h2>
@@ -66,37 +66,37 @@
                 <ul class="splide__list">
                     <li class="splide__slide">
                         <a href="project.html">
-                            <img src="./assets/img/src/stash.jpg" alt="">
+                            <img src="./assets/img/dist/stash.jpg" alt="">
                         </a>
                         <h2 class="text-pro">Project 1</h2>
                     </li>
                     <li class="splide__slide">
                         <a href="project.html">
-                            <img src="./assets/img/src/section-2.jpg" alt="">
+                            <img src="./assets/img/dist/section-2.jpg" alt="">
                         </a>
                         <h2 class="text-pro">Project 2</h2>
                     </li>
                     <li class="splide__slide">
                         <a href="project.html">
-                            <img src="./assets/img/src/card1.jpg" alt="">
+                            <img src="./assets/img/dist/card1.jpg" alt="">
                         </a>
                         <h2 class="text-pro">Project 3</h2>
                     </li>
                     <li class="splide__slide">
                         <a href="project.html">
-                            <img src="./assets/img/src/section-3.jpg" alt="">
+                            <img src="./assets/img/dist/section-3.jpg" alt="">
                         </a>
                         <h2 class="text-pro">Project 4</h2>
                     </li>
                     <li class="splide__slide slide_project ">
                         <a href="project.html">
-                            <img src="./assets/img/src/section-2.jpg" alt="">
+                            <img src="./assets/img/dist/section-2.jpg" alt="">
                         </a>
                         <h2 class="text-pro">Project 5</h2>
                     </li>
                     <li class="splide__slide slide_project ">
                         <a href="project.html">
-                            <img src="./assets/img/src/section-4.jpg" alt="">
+                            <img src="./assets/img/dist/section-4.jpg" alt="">
                         </a>
                         <h2 class="text-pro">Project 6</h2>
                     </li>
@@ -109,7 +109,7 @@
     <footer>
         <div id="footer">
             <div id="footer-head">
-                <img src="./assets/img/src/logo-white.svg" alt="logo-campus" id="campus-log">
+                <img src="./assets/img/dist/logo-white.svg" alt="logo-campus" id="campus-log">
                 <ul id="foot-links">
                     <li><a href=cgu.html>CGU</a></li>
                     <li><a href=contact.html>Contact</a></li>
