--- a/userport.html
+++ b/userport.html
@@ -12,7 +12,7 @@
     <body>
         <header class="main-header">
             <div class="logo">
-                <img src="/assets/img/src/logo_campus_transparent.PNG.png" alt="">
+                <img src="/assets/img/dist/logo_campus_transparent.PNG.png" alt="">
             </div>
             <div class="burger-bar" id="burger">
                 <div class="first-line"></div>
@@ -40,7 +40,7 @@
         </div>
         <div class="user-infos">
             <div id="user-port-img">
-                <img src="./assets/img/src/author.jpg" alt="Sam Oustache">
+                <img src="./assets/img/dist/author.jpg" alt="Sam Oustache">
             </div>
             <h2 class="user-title">Sam Oustache</h2>
             <div class="user-text">
@@ -106,7 +106,7 @@
         <footer>
             <div id="footer">
                 <div id="footer-head">
-                    <img src="./assets/img/src/logo-white.svg" alt="logo-campus" id="campus-log">
+                    <img src="./assets/img/dist/logo-white.svg" alt="logo-campus" id="campus-log">
                     <ul id="foot-links">
                         <li><a href="cgu.html">CGU</a></li>
                         <li><a href="contact.html">Contact</a></li>
